crates/ruff_python_parser/tests/snapshots/invalid_syntax@match_expected_colon.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/match_expected_colon.py
---
## AST

```
Module(
    ModModule {
        range: 0..29,
        body: [
            Match(
                StmtMatch {
                    range: 0..28,
                    subject: List(
                        ExprList {
                            range: 6..12,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 7..8,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 10..11,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 17..28,
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 22..23,
                                    pattern: None,
                                    name: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        range: 25..28,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                range: 25..28,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | match [1, 2]
  |             ^ Syntax Error: Expected ':', found newline
2 |     case _: ...
  |
